--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.material_3_demo">
+    package="com.example.hegemony_automa_helper">
     <application
-        android:label="material_3_demo"
+        android:label="hegemony_automa_helper"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
