--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "material_3_demo",
-    "short_name": "material_3_demo",
+    "name": "hegemony_automa_helper",
+    "short_name": "hegemony_automa_helper",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
