--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^5.0.0
   url_launcher: ^6.1.8
   shared_preferences: ^2.1.2
+  sidebarx: ^0.16.0
 
 dev_dependencies:
   flutter_test:
