--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   url_launcher: ^6.1.8
   shared_preferences: ^2.1.2
   sidebarx: ^0.16.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
